<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="au_module_name">轮廓临摹</string>
    <string name="au_save_draw_picture">保存临摹结果图片</string>
    <string name="au_save_draw_video">保存临摹过程视频</string>
    <string name="au_share">分享</string>
    <string name="au_share_draw_picture">分享临摹结果图片</string>
    <string name="au_share_draw_video">分享临摹过程视频</string>
    <string name="au_background">背景</string>
    <string name="au_paint">画笔</string>
    <string name="au_line_px">线条(px)</string>
    <string name="au_speed_delay">延时</string>
    <string name="au_line">线条</string>
    <string name="au_speed_delay_ms">延时(ms)</string>
    <string name="au_save">保存</string>
    <string name="au_choose_photo">选择图片</string>
    <string name="au_no_read_storage_perm">无法读取本地图片：没有外部存储读取权限</string>
    <string name="au_load_photo_failed">加载图片失败</string>
    <string name="au_outline_object">临摹对象</string>
    <string name="au_paint_color">颜料</string>
    <string name="au_settings">设置</string>
    <string name="au_no_outline_to_save">绘制轮廓后再进行分享吧~</string>
    <string name="au_is_loading">加载中，请稍等...</string>
    <string name="au_cancel_draw">绘制已取消</string>
    <string name="au_cannot_share_video_version">抱歉，Android5.0以上版本才支持分享绘制视频</string>
    <string name="au_not_ready_record_video">正在加载资源，请稍后再试~</string>
    <string name="au_record_draw_video_title">视频录制提示</string>
    <string name="au_record_draw_video_tip">录制过程中会进入全屏模式，您可以通过点击空白区域或返回键取消录制</string>
    <string name="au_got_it">知道了</string>
    <string name="au_cancel_record_video">录制已取消</string>
    <string name="au_complete_recording">录制完成</string>
    <string name="au_share_draw_video_tip">临摹视频录制完成，您可以通过下方的按钮进行预览和分享~</string>
    <string name="au_preview">预览</string>
    <string name="au_cancel">取消</string>
    <string name="au_auto_draw_tip">欢迎使用轮廓临摹功能，点击画布即可开始/取消图片临摹，您可以通过设置菜单设置相关参数，通过分享菜单进行图片或视频的保存及分享</string>
    <string name="app_name" tools:ignore="ResourceName">轮廓临摹</string>
</resources>
