<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vgDrawSettings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:orientation="horizontal">

    <ViewFlipper
        android:id="@+id/vgTabContentFlipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/widget_size_5"
        android:paddingTop="@dimen/widget_size_5">
        <!--临摹对象-->
        <LinearLayout style="@style/au_AutoDrawSettingVg">

            <TextView
                style="@style/au_AutoDrawSettingTv"
                android:text="@string/au_outline_object"/>

            <ImageView
                android:id="@+id/ivObjectView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/widget_size_150"
                android:layout_marginTop="@dimen/widget_size_10"
                android:adjustViewBounds="true"/>
        </LinearLayout>
        <!--背景-->
        <LinearLayout
            style="@style/au_AutoDrawSettingVg"
            android:layout_gravity="right|top"
            android:layout_marginTop="0dp">

            <TextView
                style="@style/au_AutoDrawSettingTv"
                android:text="@string/au_background"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvBgOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:orientation="vertical"
                android:scrollbars="none"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/au_item_bg"/>
        </LinearLayout>
        <!--画笔-->
        <LinearLayout
            style="@style/au_AutoDrawSettingVg"
            android:layout_gravity="right|top"
            android:layout_marginTop="0dp">

            <TextView
                style="@style/au_AutoDrawSettingTv"
                android:text="@string/au_paint"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPaintOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
        </LinearLayout>
        <!--颜料-->
        <LinearLayout
            style="@style/au_AutoDrawSettingVg"
            android:layout_gravity="right|top"
            android:layout_marginTop="0dp">

            <TextView
                style="@style/au_AutoDrawSettingTv"
                android:text="@string/au_paint_color"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPaintColorOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:orientation="vertical"
                android:scrollbars="none"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:spanCount="3"
                tools:listitem="@layout/au_item_paint_color"/>
        </LinearLayout>
        <!--线条粗细-->
        <LinearLayout
            style="@style/au_AutoDrawSettingVg"
            android:layout_gravity="right|center_vertical">

            <TextView
                style="@style/au_AutoDrawSettingTv"
                android:text="@string/au_line_px"/>

            <com.ue.autodraw.NumberSelectorView
                android:id="@+id/nsLineThickness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                app:spKey="sp_line_px"
                app:stepLen="1"/>
        </LinearLayout>
        <!--延时-->
        <LinearLayout
            style="@style/au_AutoDrawSettingVg"
            android:layout_gravity="right|center_vertical">

            <TextView
                style="@style/au_AutoDrawSettingTv"
                android:text="@string/au_speed_delay_ms"/>

            <com.ue.autodraw.NumberSelectorView
                android:id="@+id/nsDelaySpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                app:spKey="sp_delay_speed"
                app:stepLen="10"/>
        </LinearLayout>
    </ViewFlipper>

    <RadioGroup
        android:id="@+id/rgTabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbTabObject"
            style="@style/au_AutoDrawTab"
            android:text="@string/au_outline_object"/>

        <RadioButton
            android:id="@+id/rbTabBackground"
            style="@style/au_AutoDrawTab"
            android:text="@string/au_background"/>

        <RadioButton
            android:id="@+id/rbTabPaint"
            style="@style/au_AutoDrawTab"
            android:text="@string/au_paint"/>

        <RadioButton
            android:id="@+id/rbTabPaintColor"
            style="@style/au_AutoDrawTab"
            android:text="@string/au_paint_color"/>

        <RadioButton
            android:id="@+id/rbTabLine"
            style="@style/au_AutoDrawTab"
            android:text="@string/au_line"/>

        <RadioButton
            android:id="@+id/rbTabSpeed"
            style="@style/au_AutoDrawTab"
            android:text="@string/au_speed_delay"/>
    </RadioGroup>
</LinearLayout>